kustomize/dev/mentum-eks-cluster-dev/ingress-static-file/api.yaml
# This ingress was isolated to only include 
# the services that need the enable-cors annotation
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: mentum
  annotations:      
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: public-nginx
  rules:
  - host: dev.mentumqr.com
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: api
            port: 
              number: 81
