kustomize/dev/mentum-eks-cluster-dev/ingress-static-file/ingress-customer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev.mentumqr.com-customer
  namespace: mentum
  annotations:      
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
  labels:
    name: dev.mentumqr.com-frontend
spec:
  rules:
  - host: dev.mentumqr.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /(.+)
        backend:
          service:
            name: customer
            port: 
              number: 80
  defaultBackend:
    service:
      name: customer
      port: 
        number: 80
