kustomize/dev/mentum-eks-cluster-dev/ingress-static-file/ingress-forward.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev.mentumqr.com-forward-target
  namespace: mentum
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # TODO: Restrict CORS origins
    #"https://*.dev.mentumqr.com:4443, https://*.dev.mentumqr.com, https://*.dev.mentumqr.com"
    # nginx.ingress.kubernetes.io/allow-headers: "Accept, Accept-Encoding, Content-Type, Content-Length, Host, User-Agent, Authorization, X-Requested-With, sentry-trace, baggage"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*" 
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/allow-headers: "*"
spec:
  ingressClassName: public-nginx
  rules:
  - host: dev.mentumqr.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customer
            port: 
              number: 80
      - path: /ameego
        pathType: Prefix
        backend:
          service:
            name: ameego
            port: 
              number: 80
      - path: /v1/
        pathType: Prefix
        backend:
          service:
            name: caput
            port: 
              number: 80
      - path: /hermes/
        pathType: Prefix
        backend:
          service:
            name: hermes
            port: 
              number: 80
      - path: /olo/
        pathType: Prefix
        backend:
          service:
            name: olo
            port: 
              number: 80
      - path: /doordash/
        pathType: Prefix
        backend:
          service:
            name: doordash
            port: 
              number: 81
      - path: /grubhub/
        pathType: Prefix
        backend:
          service:
            name: grubhub
            port: 
              number: 81
      - path: /skip/
        pathType: Prefix
        backend:
          service:
            name: skip
            port: 
              number: 80
      - path: /socket/
        pathType: Prefix
        backend:
          service:
            name: socket
            port: 
              number: 80
      - path: /uber/
        pathType: Prefix
        backend:
          service:
            name: uber
            port: 
              number: 80
