kustomize/dev/mentum-eks-cluster-dev/ingress-static-file/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev.mentumqr.com
spec:
  ingressClassName: public-nginx
  rules:
  - host: dev.mentumqr.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customer
            port: 
              number: 80
      - path: /ameego/
        pathType: Prefix
        backend:
          service:
            name: ameego
            port: 
              number: 80
      - path: /merchant/
        pathType: Prefix
        backend:
          service:
            name: merchant
            port: 
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: api
            port: 
              number: 81
      - path: /v1/
        pathType: Prefix
        backend:
          service:
            name: caput
            port: 
              number: 80
      - path: /cortex/
        pathType: Prefix
        backend:
          service:
            name: cortex
            port: 
              number: 81
      - path: /hermes/
        pathType: Prefix
        backend:
          service:
            name: hermes
            port: 
              number: 80
      - path: /hippo/
        pathType: Prefix
        backend:
          service:
            name: hippo
            port: 
              number: 81
      - path: /olo/
        pathType: Prefix
        backend:
          service:
            name: olo
            port: 
              number: 80
      - path: /doordash/
        pathType: Prefix
        backend:
          service:
            name: doordash
            port: 
              number: 80
      - path: /grubhub/
        pathType: Prefix
        backend:
          service:
            name: grubhub
            port: 
              number: 80
      - path: /skip/
        pathType: Prefix
        backend:
          service:
            name: skip
            port: 
              number: 80
      - path: /socket/
        pathType: Prefix
        backend:
          service:
            name: socket
            port: 
              number: 80
      - path: /uber/
        pathType: Prefix
        backend:
          service:
            name: uber
            port: 
              number: 80
      - path: /app-test/
        pathType: Prefix
        backend:
          service:
            name: app-test
            port: 
              number: 80
